TextRenderer: constant init with Map.of + Boolean.parseBoolean
Signed-off-by: pizzi80 <paolo@given2.com>